<resources>
    <string name="ip0">http://192.168.1.24:8000/</string>
    <string name="ip1">http://192.168.31.196:8000/</string>

    <string name="app_name">Flightmode</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="authhead">Войдите или присоединитесь к Flightmode для покупок билетов и других функций</string>
    <string name="mail_hint">Ваш e-mail</string>
    <string name="login_hint">Ваш логин</string>
    <string name="password_hint">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="authtext">Войти</string>
    <string name="register">Регистрация</string>
    <string name="buying_ticket">Купить билет</string>

    <string name="place_out">Пункт отправления</string>
    <string name="place_to">Пункт назначения</string>
    <string name="time_to">Вылет</string>
    <string name="time_out">Прилёт</string>
    <string name="place_x2_holder">Город</string>
    <string name="time_placeholder">00:00</string>
    <string name="date_placeholder">00.00.0000 00:00</string>

    <string name="typecity">Найдите рейсы по городам</string>
    <string name="my_tickets">Мои билеты</string>
    <string name="my_temps">Мои шаблоны</string>

    <string name="about_ticket">О билете</string>

    <string name="depplace2xholder">Аэропорт Flightmode</string>
    <string name="arrplace2xholder">Аэропорт Линкольна</string>
    <string name="pricecard">От $30</string>

    <string name="airport_destination">Аэропорт:
Город:
Страна:

Отправляется:
Прибывает:

Авиакомпания:
Самолёт:

Выберите класс и услуги:</string>

    <string name="ticket_info">Аэропорт: Лондон (London)
Город: Лондон (London)
Страна: Великобритания (United Kingdom)

Отправляется: 00.00.0000 00:00
Прибывает: 00.00.0000 00:00

Авиакомпания: Example Airlines
Самолёт: Example 200

Класс: Бизнес ($3000)
Выбраны услуги: багаж ($10), питомцы ($50), место у окна ($80), страховка ($100)

ФИО: Иванов Иван Иванович
Пол: Мужской
Гражданство: США
Дата рождения: 10.10.2000
Номер и серия паспорта: 12345678
Номер и серия загранпаспорта: 12345678</string>

    <string name="econom">Эконом</string>
    <string name="comfort">Комфорт</string>
    <string name="business">Бизнес</string>

    <string name="baggage">Багаж</string>
    <string name="pets">Питомцы</string>
    <string name="windows">Место у окна</string>
    <string name="insurance">Страховка</string>

    <string name="price">$0</string>
    <string name="buy_price">Купить за $0</string>
    <string name="qr">QR Code</string>

    <string name="full_n">Полное имя</string>
    <string name="gend">Гендер</string>
    <string name="nationality">Гражданство</string>
    <string name="birth">Дата рождения</string>
    <string name="birthplace">Место рождения</string>
    <string name="pno">Паспорт или загранпаспорт</string>
    <string name="pissuedon">Дата выдачи паспорта</string>
    <string name="pexp">Срок действия паспорта</string>
    <string name="pauth">Кем выдан паспорт</string>
    <string name="tno">Номер и серия загранпаспорта</string>
    <string name="tissuedon">Дата выдачи загранпаспорта</string>
    <string name="texp">Срок действия загранпаспорта</string>
    <string name="tauth">Кем выдан загранпаспорт</string>

    <string name="return_ticket">Вернуть</string>
    <string name="account">Аккаунт</string>
    <string name="current">Текущий пароль</string>
    <string name="newp">Новый пароль</string>
    <string name="change">Изменить</string>

    <string name="gender">Гендер</string>

    <string-array name="genders">
        <item>Выберите пол</item>
        <item>Женский</item>
        <item>Мужской</item>
    </string-array>

    <string-array name="countries">
        <item>Выберите страну гражданства</item>
        <item>Австралия</item>
        <item>Австрия</item>
        <item>Азербайджан</item>
        <item>Аландские острова</item>
        <item>Албания</item>
        <item>Алжир</item>
        <item>Американское Самоа</item>
        <item>Ангилья</item>
        <item>Ангола</item>
        <item>Андорра</item>
        <item>Антарктика</item>
        <item>Антигуа и Барбуда</item>
        <item>Аргентина</item>
        <item>Армения</item>
        <item>Аруба</item>
        <item>Афганистан</item>
        <item>Багамские Острова</item>
        <item>Бангладеш</item>
        <item>Барбадос</item>
        <item>Бахрейн</item>
        <item>Беларусь</item>
        <item>Белиз</item>
        <item>Бельгия</item>
        <item>Бенин</item>
        <item>Бермуды</item>
        <item>Болгария</item>
        <item>Боливия</item>
        <item>Бонайре, Синт-Эстатиус и Саба</item>
        <item>Босния и Герцеговина</item>
        <item>Ботсвана</item>
        <item>Бразилия</item>
        <item>Британская территория в Индийском океане</item>
        <item>Бруней</item>
        <item>Буркина-Фасо</item>
        <item>Бурунди</item>
        <item>Бутан</item>
        <item>Вануату</item>
        <item>Ватикан</item>
        <item>Великобритания</item>
        <item>Венгрия</item>
        <item>Венесуэла</item>
        <item>Виргинские Острова (Великобритания)</item>
        <item>Виргинские Острова (США)</item>
        <item>Внешние малые острова США</item>
        <item>Восточный Тимор</item>
        <item>Вьетнам</item>
        <item>Габон</item>
        <item>Гаити</item>
        <item>Гайана</item>
        <item>Гамбия</item>
        <item>Гана</item>
        <item>Гваделупа</item>
        <item>Гватемала</item>
        <item>Гвиана</item>
        <item>Гвинея</item>
        <item>Гвинея-Бисау</item>
        <item>Германия</item>
        <item>Гернси</item>
        <item>Гибралтар</item>
        <item>Гондурас</item>
        <item>Гонконг</item>
        <item>Государство Палестина</item>
        <item>Гренада</item>
        <item>Гренландия</item>
        <item>Греция</item>
        <item>Грузия</item>
        <item>Гуам</item>
        <item>Дания</item>
        <item>Демократическая республика Конго</item>
        <item>Джерси</item>
        <item>Джибути</item>
        <item>Доминика</item>
        <item>Доминиканская Республика</item>
        <item>Европейский союз</item>
        <item>Египет</item>
        <item>Замбия</item>
        <item>Зимбабве</item>
        <item>Израиль</item>
        <item>Индия</item>
        <item>Индонезия</item>
        <item>Иордания</item>
        <item>Ирак</item>
        <item>Иран</item>
        <item>Ирландия</item>
        <item>Исландия</item>
        <item>Испания</item>
        <item>Италия</item>
        <item>Йемен</item>
        <item>Кабо-Верде</item>
        <item>Казахстан</item>
        <item>Камбоджа</item>
        <item>Камерун</item>
        <item>Канада</item>
        <item>Катар</item>
        <item>Кения</item>
        <item>Кипр</item>
        <item>Киргизия</item>
        <item>Кирибати</item>
        <item>Китай</item>
        <item>Кокосовые острова</item>
        <item>Колумбия</item>
        <item>Коморы</item>
        <item>Косово</item>
        <item>Коста-Рика</item>
        <item>Кот-д’Ивуар</item>
        <item>Крым</item>
        <item>Куба</item>
        <item>Кувейт</item>
        <item>Кюрасао</item>
        <item>Лаос</item>
        <item>Латвия</item>
        <item>Лесото</item>
        <item>Либерия</item>
        <item>Ливан</item>
        <item>Ливия</item>
        <item>Литва</item>
        <item>Лихтенштейн</item>
        <item>Люксембург</item>
        <item>Маврикий</item>
        <item>Мавритания</item>
        <item>Мадагаскар</item>
        <item>Майотта</item>
        <item>Макао</item>
        <item>Малави</item>
        <item>Малайзия</item>
        <item>Мали</item>
        <item>Мальдивы</item>
        <item>Мальта</item>
        <item>Марокко</item>
        <item>Мартиника</item>
        <item>Маршалловы Острова</item>
        <item>Мексика</item>
        <item>Микронезия</item>
        <item>Мозамбик</item>
        <item>Молдавия</item>
        <item>Монако</item>
        <item>Монголия</item>
        <item>Монтсеррат</item>
        <item>Мьянма</item>
        <item>Намибия</item>
        <item>Науру</item>
        <item>Непал</item>
        <item>Нигер</item>
        <item>Нигерия</item>
        <item>Нидерланды</item>
        <item>Никарагуа</item>
        <item>Ниуэ</item>
        <item>Новая Зеландия</item>
        <item>Новая Каледония</item>
        <item>Норвегия</item>
        <item>ОАЭ</item>
        <item>Оман</item>
        <item>Остров Буве</item>
        <item>Остров Мэн</item>
        <item>Остров Рождества</item>
        <item>Острова Кука</item>
        <item>Острова Святой Елены, Вознесения и Тристан-да-Кунья</item>
        <item>Пакистан</item>
        <item>Палау</item>
        <item>Панама</item>
        <item>Папуа — Новая Гвинея</item>
        <item>Парагвай</item>
        <item>Перу</item>
        <item>Польша</item>
        <item>Португалия</item>
        <item>Пуэрто-Рико</item>
        <item>Республика Конго</item>
        <item>Реюньон</item>
        <item>Россия</item>
        <item>Руанда</item>
        <item>Румыния</item>
        <item>Сальвадор</item>
        <item>Самоа</item>
        <item>Сан-Марино</item>
        <item>Сан-Томе и Принсипи</item>
        <item>Саудовская Аравия</item>
        <item>Северная Корея</item>
        <item>Северная Македония</item>
        <item>Северные Марианские Острова</item>
        <item>Сейшельские Острова</item>
        <item>Сен-Бартелеми</item>
        <item>Сен-Мартен</item>
        <item>Сен-Пьер и Микелон</item>
        <item>Сенегал</item>
        <item>Сент-Винсент и Гренадины</item>
        <item>Сент-Китс и Невис</item>
        <item>Сент-Люсия</item>
        <item>Сербия</item>
        <item>Сингапур</item>
        <item>Синт-Мартен</item>
        <item>Сирия</item>
        <item>Словакия</item>
        <item>Словения</item>
        <item>Соломоновы Острова</item>
        <item>Сомали</item>
        <item>Судан</item>
        <item>Суринам</item>
        <item>США</item>
        <item>Сьерра-Леоне</item>
        <item>Таджикистан</item>
        <item>Таиланд</item>
        <item>Тайвань</item>
        <item>Танзания</item>
        <item>Теркс и Кайкос</item>
        <item>Того</item>
        <item>Токелау</item>
        <item>Тонга</item>
        <item>Тринидад и Тобаго</item>
        <item>Тувалу</item>
        <item>Тунис</item>
        <item>Туркменистан</item>
        <item>Турция</item>
        <item>Уганда</item>
        <item>Узбекистан</item>
        <item>Украина</item>
        <item>Уоллис и Футуна</item>
        <item>Уругвай</item>
        <item>Фарерские острова</item>
        <item>Фиджи</item>
        <item>Филиппины</item>
        <item>Финляндия</item>
        <item>Фолклендские острова</item>
        <item>Франция</item>
        <item>Французская Полинезия</item>
        <item>Французские Южные и Антарктические территории</item>
        <item>Херд и Макдональд</item>
        <item>Хорватия</item>
        <item>ЦАР</item>
        <item>Чад</item>
        <item>Черногория</item>
        <item>Чехия</item>
        <item>Чили</item>
        <item>Швейцария</item>
        <item>Швеция</item>
        <item>Шпицберген и Ян-Майен</item>
        <item>Шри-Ланка</item>
        <item>Эквадор</item>
        <item>Экваториальная Гвинея</item>
        <item>Эритрея</item>
        <item>Эсватини</item>
        <item>Эстония</item>
        <item>Эфиопия</item>
        <item>ЮАР</item>
        <item>Южная Георгия и Южные Сандвичевы Острова</item>
        <item>Южная Корея</item>
        <item>Южный Судан</item>
        <item>Ямайка</item>
        <item>Япония</item>
    </string-array>

</resources>